# ai-trader-arena

./: .env.example  .gitignore  CLAUDE.md  README.md  baseline_results.json  pyproject.toml
.github/workflows/: daily.yml  deploy-pages.yml
data/backups/: arena_2026-04-25.db  arena_2026-05-04.db
docs/: agent_strategies.md  architecture.md  migration_notes.md  schema.md
docs/site/: index.html
experiments/: README.md
scripts/: backup_db.py  diagnose_picks.py  migrate_legacy.py
src/arena/: __init__.py  cli.py  config.py
src/arena/agents/: __init__.py  aggressive.py  balanced.py  base.py  conservative.py  etf_only.py
src/arena/analytics/: __init__.py  equity_curve.py  factor_stats.py  metrics.py
src/arena/data/: __init__.py  fetcher.py  freshness.py  prices.py  schema.py  sector_rs.py
src/arena/db/: __init__.py  connection.py  migrations.py  repositories.py  schema.sql
src/arena/engine/: __init__.py  calendar.py  commentary.py  orchestrator.py  orders.py  portfolio.py  rules.py  snapshot.py  weekly_review.py
src/arena/notify/: __init__.py  discord.py  email_section.py
src/arena/web/: __init__.py  builder.py
src/arena/web/static/: style.css
src/arena/web/templates/: index.html
tests/: conftest.py  test_notify.py  test_phase1_port.py  test_phase3_factor_snapshots.py  test_phase4_etf_only.py  test_phase5_web_build.py  test_smoke.py
